Simplify crew animation

--- a/crew.html
+++ b/crew.html
@@ -41,10 +41,10 @@
 
     <!-- List of crew members -->
     <div class="content crew">
-        <h1 style="animation: fadeInFromBelow 1s both;">
+        <h1>
             Meet the <span class="brarsYellow">crew</span>
         </h1>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.2s;">
+        <div class="crewMember">
             <img src="images/guvernoren.jpeg" alt="Image of Guvernören" class="portrait"/>
             <h2>Guvernören</h2>
             <p>
@@ -52,7 +52,7 @@
                 Always with something in his mouth, whether it is cigars or sax reeds, rumbling baritone noise is his signum.
             </p>
         </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.25s;">
+        <div class="crewMember">
             <img src="images/rodebaronen.jpg" alt="Image of Röde Baronen" class="portrait"/>
             <h2>Röde Baronen</h2>
             <p>
@@ -60,7 +60,7 @@
                 double-bore T-bone, an instrument as simple as his mind, he is truly a forzando to be reckoned with.
             </p>
         </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.3s;">
+        <div class="crewMember">
             <img src="images/majoren.jpg" alt="Image of Majoren" class="portrait"/>
             <h2>Majoren</h2>
             <p>
@@ -69,14 +69,14 @@
                 - 8 cm
             </p>
         </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.35s;">
+        <div class="crewMember">
             <img src="images/doktorn.jpg" alt="Image of Doktorn" class="portrait"/>
             <h2>Doktorn</h2>
             <p>
                 Holder of the Guiness world record for the brownest tone ever played on a used rectoscope.
             </p>
         </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.5s;">
+        <div class="crewMember">
             <img src="images/pastorn.jpg" alt="Image of Pastorn" class="portrait"/>
             <h2>Pastorn</h2>
             <p>
@@ -84,7 +84,7 @@
                 But beware: with the sweet sound from his tenor sax he will lead you to eternal damnation.
             </p>
         </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.45s;">
+        <div class="crewMember">
             <img src="images/direktorn.jpg" alt="Image of Direktörn" class="portrait"/>
             <h2>Direktörn</h2>
             <p>
@@ -92,7 +92,7 @@
                 philantropist he steals from the poor and gives to the rich, oftentimes himself. Wanna smell his glögg?
             </p>
         </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.4s;">
+        <div class="crewMember">
             <img src="images/kaptenen.jpg" alt="Image of Kaptenen" class="portrait"/>
             <h2>Kaptenen</h2>
             <p>
@@ -100,14 +100,14 @@
                 bukis with the Kraken. He has one wooden limb, can you guess which?
             </p>
         </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.55s;">
+        <div class="crewMember">
             <img src="images/greven.jpg" alt="Image of Greven" class="portrait"/>
             <h2>Greven</h2>
             <p>
                 You cannot count on this Count being a real cunt, because he cannot count himself.
             </p>
         </div>
-        <div class="crewMember" style="animation: fadeInFromBelow 0.5s both 0.6s;">
+        <div class="crewMember">
             <img src="images/maskinen.jpg" alt="Image of Maskinen" class="portrait"/>
             <h2>Maskinen</h2>
             <p>
