--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="BRÄRS, music, brass music, brass, party, dance, pop, pop music">
+    <meta name="theme-color" content="#000" />
 
     <!-- Tags for defining which image is shown when page is shared social medias -->
     <meta property="og:image" content="https://brars.se/logos/logga_with_alpha.png">
