Update description on start page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </p>
         <p>
             Inspired by the likes of MEUTE, Lucky Chops,
-            and Uppsala kulturskola, these nine brass musicians are here to bring the new wave
+            and Uppsala kulturskola, these nine brassers are here to bring the new wave
             of brasspop to Linköping.
         </p>
     </div>
