--- a/media.html
+++ b/media.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>BRÄRS</title>
+    <link rel="icon" type="image/x-icon" href="./logos/favicon32.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="BRÄRS, music, brass music, brass, party, dance, pop, pop music">
