Add marker for current page in navbar

--- a/crew.html
+++ b/crew.html
@@ -37,7 +37,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <a href="./index.html">About</a>
-        <a href="./crew.html">Crew</a>
+        <a href="./crew.html" class="currentPage">Crew</a>
         <a href="./media.html">Media</a>
     </div>
 
