--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <!-- Navbar -->
     <div class="navbar">
-        <a href="./index.html">About</a>
+        <a href="./index.html" class="currentPage">About</a>
         <a href="./crew.html">Crew</a>
         <a href="./media.html">Media</a>
     </div>
