--- a/media.html
+++ b/media.html
@@ -38,7 +38,7 @@
     <div class="navbar">
         <a href="./index.html">About</a>
         <a href="./crew.html">Crew</a>
-        <a href="./media.html">Media</a>
+        <a href="./media.html" class="currentPage">Media</a>
     </div>
 
     <!-- Media content -->
