--- a/crew.html
+++ b/crew.html
@@ -123,6 +123,16 @@
                 this machine only runs on malt-enriched fluid replacement.
             </p>
         </div>
+        <div class="crewMember">
+            <img src="images/operatoren.jpg" alt="Image of Operatören" class="portrait"/>
+            <h2>Operatören</h2>
+            <p>
+                “Command and control!”, he shouts angrily as he uses his many intricate tools to
+                deliver some of the most complex beats in modern history. He is also rumored to be
+                behind the wheels of the fearsome Maskinen. Or he is he? Maskinen is in fact
+                controlled with a joystick. And that, according to Operatören, that's najs.
+            </p>
+        </div>
     </div>
 
     <!-- Footer -->
