Update contact email

--- a/media.html
+++ b/media.html
@@ -56,11 +56,11 @@
     <!-- Footer -->
     <footer>
         <div class="contact">
-            <a class="contactWay" href="mailto:anton.ig.eriksson@gmail.com">
+            <a class="contactWay" href="mailto:brars.band@gmail.com">
                 <svg class="svgToWhite" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" aria-label="Mail logo">
                     <image href="./logos/email.svg" height="100%" width="100%" />
                 </svg>
-                <p>anton.ig.eriksson@gmail.com</p>
+                <p>brars.band@gmail.com</p>
             </a>
             <a class="contactWay" href="tel:+46736143063">
                 <svg class="svgToWhite" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" aria-label="Phone logo">
