Change Operatören to Perkolatorn in member section

--- a/crew.html
+++ b/crew.html
@@ -125,13 +125,11 @@
             </p>
         </div>
         <div class="crewMember">
-            <img src="images/operatoren.jpg" alt="Image of Operatören" class="portrait"/>
-            <h2>Operatören</h2>
+            <img src="images/perkolatorn.jpg" alt="Image of Perkolatorn" class="portrait"/>
+            <h2>Perkolatorn</h2>
             <p>
-                “Command and control!”, he shouts angrily as he uses his many intricate tools to
-                deliver some of the most complex beats in modern history. He is also rumored to be
-                behind the wheels of the fearsome Maskinen. Or he is he? Maskinen is in fact
-                controlled with a joystick. And that, according to Operatören, that's najs.
+                The percs of constituting half of the battery section are limitless, however this
+                rythmic agent perculates the tambourine with a good sense of tasteful restraint.
             </p>
         </div>
     </div>
