Change images on landing page

--- a/index.html
+++ b/index.html
@@ -48,10 +48,32 @@
 
     <!-- Polariod pictures -->
     <div class="album">
-        <img src="images/gig2.jpg" alt="Gig image" class="polaroid" style="animation-name: polaroid1; animation-delay: 0.5s"/>
-        <img src="images/gig3.jpg" alt="Gig image" class="polaroid" style="animation-name: polaroid2; animation-delay: 0.3s;"/>
-        <img src="images/gig1.jpg" alt="Gig image" class="polaroid" style="animation-name: polaroid3; animation-delay: 0.4s;"/>
-        <img src="images/gig4.jpg" alt="Gig image" class="polaroid" style="animation-name: polaroid4; animation-delay: 0.6s;"/>
+        <img
+            src="images/villeGig1.jpg"
+            alt="Gig image"
+            title="Fotograf: Emil Ala-Kulju"
+            class="polaroid"
+            style="animation-name: polaroid1; animation-delay: 0.5s"/
+        >
+        <img
+            src="images/palatsGig1.jpg"
+            alt="Gig image"
+            class="polaroid"
+            style="animation-name: polaroid2; animation-delay: 0.3s;"
+        />
+        <img
+            src="images/kulturnattGig1.jpg"
+            alt="Gig image"
+            class="polaroid"
+            style="animation-name: polaroid3; animation-delay: 0.4s;"
+        />
+        <img
+            src="images/villeGig2.jpg"
+            alt="Gig image"
+            title="Fotograf: Emil Ala-Kulju"
+            class="polaroid"
+            style="animation-name: polaroid4; animation-delay: 0.6s;"
+        />
     </div>
 
     <!-- About BRÄRS -->
