--- a/crew.html
+++ b/crew.html
@@ -30,7 +30,7 @@
 <body>
     <!-- Header -->
     <div class="header">
-        <img src="logos/logga_with_alpha_smaller.png" aria-label="BRÄRS logo" class="logo" onclick="playAudio()"/>
+        <img src="logos/logga_horisontell.png" aria-label="BRÄRS logo" class="logo" onclick="playAudio()"/>
         <audio id="audio" src="./sound/BrarsPublik.mp3"></audio>
         <script>
             function playAudio() {
