--- a/media.html
+++ b/media.html
@@ -31,7 +31,7 @@
     <!-- Header -->
     <div class="header">
         <img src="logos/logga_horisontell.png" aria-label="BRÄRS logo" class="logo" onclick="playAudio()"/>
-        <audio id="audio" src="./sound/BrarsPublik.mp3"></audio>
+        <audio id="audio" src="./sound/RoundShort.mp3"></audio>
         <script>
             function playAudio() {
                 var audioElement = document.getElementById("audio");
