Added reviews page

--- a/crew.html
+++ b/crew.html
@@ -39,10 +39,12 @@
             }
         </script>
     </div>
+    
     <!-- Navbar -->
     <div class="navbar">
-        <a href="./index.html">About</a>
-        <a href="./crew.html" class="currentPage">Crew</a>
+        <a href="./index.html" class="currentPage">About</a>
+        <a href="./crew.html">Crew</a>
+        <a href="./reviews.html">Reviews</a>
         <a href="./media.html">Media</a>
     </div>
 
