--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="navbar">
         <a href="./index.html" class="currentPage">About</a>
         <a href="./crew.html">Crew</a>
+        <a href="./reviews.html">Reviews</a>
         <a href="./media.html">Media</a>
     </div>
 
