Remove media from navbar since navbar did not fit in mobile view.

--- a/crew.html
+++ b/crew.html
@@ -45,7 +45,7 @@
         <a href="./index.html" class="currentPage">About</a>
         <a href="./crew.html">Crew</a>
         <a href="./reviews.html">Reviews</a>
-        <a href="./media.html">Media</a>
+        <!-- <a href="./media.html">Media</a> -->
     </div>
 
     <!-- List of crew members -->
