--- a/media.html
+++ b/media.html
@@ -39,13 +39,13 @@
             }
         </script>
     </div>
-    
+
     <!-- Navbar -->
     <div class="navbar">
         <a href="./index.html" class="currentPage">About</a>
         <a href="./crew.html">Crew</a>
         <a href="./reviews.html">Reviews</a>
-        <a href="./media.html">Media</a>
+        <!-- <a href="./media.html">Media</a> -->
     </div>
 
     <!-- Media content -->
