--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="./index.html" class="currentPage">About</a>
         <a href="./crew.html">Crew</a>
         <a href="./reviews.html">Reviews</a>
-        <a href="./media.html">Media</a>
+        <!-- <a href="./media.html">Media</a> Varför blir det för brett om jag inte tar bort den här?-->
     </div>
 
     <!-- Polariod pictures -->
