Fix navbar and add back media page

--- a/crew.html
+++ b/crew.html
@@ -42,10 +42,12 @@
     
     <!-- Navbar -->
     <div class="navbar">
-        <a href="./index.html" class="currentPage">About</a>
-        <a href="./crew.html">Crew</a>
-        <a href="./reviews.html">Reviews</a>
-        <!-- <a href="./media.html">Media</a> -->
+        <div class="navbar-links">
+            <a href="./index.html">About</a>
+            <a href="./crew.html" class="currentPage">Crew</a>
+            <a href="./reviews.html">Reviews</a>
+            <a href="./media.html">Media</a>
+        </div>
     </div>
 
     <!-- List of crew members -->
