--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
     </div>
     <!-- Navbar -->
     <div class="navbar">
-        <a href="./index.html" class="currentPage">About</a>
-        <a href="./crew.html">Crew</a>
-        <a href="./reviews.html">Reviews</a>
-        <!-- <a href="./media.html">Media</a> Varför blir det för brett om jag inte tar bort den här?-->
+        <div class="navbar-links">
+            <a href="./index.html" class="currentPage">About</a>
+            <a href="./crew.html">Crew</a>
+            <a href="./reviews.html">Reviews</a>
+            <a href="./media.html">Media</a>
+        </div>
     </div>
 
     <!-- Polariod pictures -->
