--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             alt="Gig image"
             title="Fotograf: Emil Ala-Kulju"
             class="polaroid"
-            style="animation-name: polaroid1; animation-delay: 0.5s"/
-        >
+            style="animation-name: polaroid1; animation-delay: 0.5s"
+        />
         <img
             src="images/palatsGig1.jpg"
             alt="Gig image"
