Rework reviews page

--- a/reviews.html
+++ b/reviews.html
@@ -58,11 +58,21 @@
         <!-- <p>
             Nånting från NT
         </p> -->
-        <p>
-            "Jävla bögband"<br>- Fröken Björn
+        <p style="animation-name: fadeInFromBelow; animation-delay: 0.50s">
+            "Jävla bögband"
+            <br>
+            <span class="quote">- Fröken Björn</span>
         </p>
-        <p>
-            "Självklart! Olof och jag skickat en kommentar imorgon!"<br>- Elite Grand Hotel Norrköping
+        <p style="animation-name: fadeInFromBelow; animation-delay: 0.75s">
+            "Självklart! Olof och jag skickat en kommentar imorgon!"
+            <br>
+            <span class="quote">- Elite Grand Hotel Norrköping</span>
+        </p>
+        <p style="animation-name: fadeInFromBelow; animation-delay: 1.0s">
+            "<strong>Nästan</strong> värt att åka från Stockholm för att se!"
+            <br/>
+            <span class="quote">- Smultronblomman</span>
+                
         </p>
     </div>
 
