Add Guvernören's beloved image to reviews

--- a/reviews.html
+++ b/reviews.html
@@ -72,8 +72,12 @@
             "<strong>Nästan</strong> värt att åka från Stockholm för att se!"
             <br/>
             <span class="quote">- Smultronblomman</span>
-                
         </p>
+        <img
+            class="review-image"
+            src="images/villevallarodebaronen.JPG"
+            alt="Gig image with Fröken"
+        />
     </div>
 
     <!-- Footer -->
