Add more reviews

--- a/reviews.html
+++ b/reviews.html
@@ -55,23 +55,30 @@
         <h1>
             User <span class="brarsYellow">reviews</span>
         </h1>
-        <!-- <p>
-            Nånting från NT
-        </p> -->
-        <p style="animation-name: fadeInFromBelow; animation-delay: 0.50s">
+        <p style="animation-name: fadeInFromBelow; animation-delay: 0.5s">
+            "Såhär glad har jag inte varit på länge"
+            <br>
+            <span class="quote">- Åskådare under Kulturnatten</span>
+        </p>
+        <p style="animation-name: fadeInFromBelow; animation-delay: 0.6s">
             "Jävla bögband"
             <br>
             <span class="quote">- Fröken Björn</span>
         </p>
-        <p style="animation-name: fadeInFromBelow; animation-delay: 0.75s">
+        <p style="animation-name: fadeInFromBelow; animation-delay: 0.7s">
             "Självklart! Olof och jag skickat en kommentar imorgon!"
             <br>
             <span class="quote">- Elite Grand Hotel Norrköping</span>
         </p>
-        <p style="animation-name: fadeInFromBelow; animation-delay: 1.0s">
+        <p style="animation-name: fadeInFromBelow; animation-delay: 0.8s">
             "<strong>Nästan</strong> värt att åka från Stockholm för att se!"
             <br/>
             <span class="quote">- Smultronblomman</span>
+        </p>
+        <p style="animation-name: fadeInFromBelow; animation-delay: 0.9s">
+            "Spelar de inte på mitt bröllop så blir det inget!"
+            <br>
+            <span class="quote">- Bröllopsgäst</span>
         </p>
         <img
             class="review-image"
