--- a/reviews.html
+++ b/reviews.html
@@ -56,6 +56,11 @@
             User <span class="brarsYellow">reviews</span>
         </h1>
         <p style="animation-name: fadeInFromBelow; animation-delay: 0.5s">
+            "Jag tror det var såhär tonårstjejer kände<br/>när dom såg Elvis Presley"
+            <br>
+            <span class="quote">- Åskådare på VilleVallas jubileum</span>
+        </p>
+        <p style="animation-name: fadeInFromBelow; animation-delay: 0.5s">
             "Såhär glad har jag inte varit på länge"
             <br>
             <span class="quote">- Åskådare under Kulturnatten</span>
