--- a/reviews.html
+++ b/reviews.html
@@ -79,14 +79,20 @@
       <p style="animation-name: fadeInFromBelow; animation-delay: 0.5s">
         "Såhär glad har jag inte varit på länge"
         <br />
-        <span class="quote">- Åskådare under Kulturnatten</span>
+        <span class="quote">- Åskådare under Kulturnatten 2024</span>
       </p>
       <p style="animation-name: fadeInFromBelow; animation-delay: 0.6s">
+        "Alltså det här är den bästa kvällen i mitt liv!<br />
+        Ni får inte sluta nu jag kom ju precis!"
+        <br />
+        <span class="quote">- Åskådare under Kulturnatten 2025</span>
+      </p>
+      <p style="animation-name: fadeInFromBelow; animation-delay: 0.7s">
         "Jävla bögband"
         <br />
         <span class="quote">- Fröken Björn</span>
       </p>
-      <p style="animation-name: fadeInFromBelow; animation-delay: 0.7s">
+      <p style="animation-name: fadeInFromBelow; animation-delay: 0.75s">
         "Självklart! Olof och jag skickat en kommentar imorgon!"
         <br />
         <span class="quote">- Elite Grand Hotel Norrköping</span>
@@ -96,7 +102,7 @@
         <br />
         <span class="quote">- Smultronblomman</span>
       </p>
-      <p style="animation-name: fadeInFromBelow; animation-delay: 0.9s">
+      <p style="animation-name: fadeInFromBelow; animation-delay: 0.85s">
         "Spelar de inte på mitt bröllop så blir det inget!"
         <br />
         <span class="quote">- Bröllopsgäst</span>
