Added tab for upcoming shows.

--- a/crew.html
+++ b/crew.html
@@ -45,6 +45,7 @@
         <div class="navbar-links">
             <a href="./index.html">About</a>
             <a href="./crew.html" class="currentPage">Crew</a>
+            <a href="./shows.html">Shows</a>
             <a href="./reviews.html">Reviews</a>
             <a href="./media.html">Media</a>
         </div>
