--- a/reviews.html
+++ b/reviews.html
@@ -62,6 +62,7 @@
       <div class="navbar-links">
         <a href="./index.html">About</a>
         <a href="./crew.html">Crew</a>
+        <a href="./shows.html">Shows</a>
         <a href="./reviews.html" class="currentPage">Reviews</a>
         <a href="./media.html">Media</a>
       </div>
