--- a/shows.html
+++ b/shows.html
@@ -20,7 +20,7 @@
 
     <!-- Local stylesheets -->
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="shows.css">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,61 +39,37 @@
             }
         </script>
     </div>
+    
     <!-- Navbar -->
     <div class="navbar">
         <div class="navbar-links">
-            <a href="./index.html" class="currentPage">About</a>
+            <a href="./index.html">About</a>
             <a href="./crew.html">Crew</a>
-            <a href="./shows.html">Shows</a>
+            <a href="./shows.html" class="currentPage">Shows</a>
             <a href="./reviews.html">Reviews</a>
             <a href="./media.html">Media</a>
         </div>
     </div>
 
-    <!-- Polariod pictures -->
-    <div class="album">
-        <img
-            src="images/villeGig1.jpg"
-            alt="Gig image"
-            title="Fotograf: Emil Ala-Kulju"
-            class="polaroid"
-            style="animation-name: polaroid1; animation-delay: 0.5s"
-        />
-        <img
-            src="images/palatsGig1.jpg"
-            alt="Gig image"
-            class="polaroid"
-            style="animation-name: polaroid2; animation-delay: 0.3s;"
-        />
-        <img
-            src="images/kulturnattGig1.jpg"
-            alt="Gig image"
-            class="polaroid"
-            style="animation-name: polaroid3; animation-delay: 0.4s;"
-        />
-        <img
-            src="images/villeGig2.jpg"
-            alt="Gig image"
-            title="Fotograf: Emil Ala-Kulju"
-            class="polaroid"
-            style="animation-name: polaroid4; animation-delay: 0.6s;"
-        />
-    </div>
-
-    <!-- About BRÄRS -->
-    <div class="content about">
+    <!-- List of crew members -->
+    <div class="content shows">
         <h1>
-            BRÄRS is ready to bugle.<br/><span class="brarsYellow">Are you?</span>
+            Upcoming <span class="brarsYellow">shows</span>
         </h1>
-        <p>
-            Get ready to hear your favorite songs played in the style of a hundred man
-            military brass band on steroids.
-        </p>
-        <p>
-            Inspired by the likes of MEUTE, Lucky Chops,
-            and Uppsala kulturskola, these ten brassers are here to bring the new wave
-            of brasspop to Linköping.
-        </p>
+        <!--<div class="showInfo">
+            <img src="images/member.png" alt="Image of Member" class="portrait"/>
+            <h2>Luciafesten 2025</h2>
+            <p>
+                <span class="brarsYellow">13 december</span>
+            </p>
+            <p>
+                Kårallen, Linköping
+            </p>
+        </div> -->
+        <div class="showInfo">
+            <img src="images/sad_brars.png" alt="Image of Member" class="portrait"/>
+            <h2>Nothing to show here <br /><span class="brarsYellow">at the moment</span></h2>
+        </div>
     </div>
 
     <!-- Footer -->
@@ -120,4 +96,3 @@
     </footer>
 </body>
 </html>
-
